--- a/md/14.md
+++ b/md/14.md
@@ -8,7 +8,7 @@
 
 ## 每月免费50000分钟，相关 *使用技巧*  及 *Ngrok部署教程* 放在以下链接了，关注后取用吧。
 
-## 【[BiLibili工房](/)】
+## 【[BiLibili工房](https://gf.bilibili.com/item/detail/1107164073)】
 
 ### 提示：Ngrok部署很简单的。
 
