--- a/md/14.md
+++ b/md/14.md
@@ -1,10 +1,12 @@
 ![14](../assets/cloud-studio-free/cloud-studio-logo-dark.7fff1da5.svg)
-## 关于Cloud Studio
+## [关于Cloud Studio](https://ide.cloud.tencent.com/)
 
 ### 配置：
 ![14](../assets/cloud-studio-free/screenshot-1731597304828.png)
 
 ![14](../assets/cloud-studio-free/screenshot-1731597438641.png)
+
+[ cloud studio 网址 ](https://ide.cloud.tencent.com/)
 
 ## 每月免费50000分钟，相关 *使用技巧*  及 *Ngrok部署教程* 放在以下链接了，关注后取用吧。
 
