--- a/md/17.md
+++ b/md/17.md
@@ -6,6 +6,14 @@
 
 ### 【[视频教程](https://www.bilibili.com/video/BV1tmSFY1ERb/)】 【[获取一键脚本](https://gf.bilibili.com/item/detail/1107198073)】
 
+[良心云第一弹](https://www.bilibili.com/video/BV1BJmSYFE2a)
+
+[良心云第二弹](https://www.bilibili.com/video/BV1QEmrYZEtt/)
+
+[良心云第三弹](https://www.bilibili.com/video/BV1tmSFY1ERb/)【一键安装open webUI】
+
+[良心云第四弹](https://www.bilibili.com/video/BV1nMzNYHEd6/)【一键安装ComfyUI + Ngrok】
+
 ### 云端在线的 Open WebUI 非常有安装的必要！
 ### 可以结合其它应用来生成图片、音乐、语音，方便好用。
 例如：
