--- a/md/21.md
+++ b/md/21.md
@@ -1,6 +1,6 @@
 ## Aitools之ComfyUI 一键安装脚本【ai来事】
 
-### 本视频解决什么问题？【[视频地址](https://space.bilibili.com/3493076850968674)】
+### 本视频解决什么问题？【[视频地址](https://www.bilibili.com/video/BV13UBRYVEmX/)】
 在 AI 创作领域，显卡及工具的配置往往会成为入门的第一道门槛。本视频就来解决这两个痛点，让人人都有你的AI PC,让你都能轻松部署。
 
 1. 一张显卡 ：硬件上满足你，达到人人都有AI PC
@@ -9,7 +9,7 @@
 
 ## 说说ComfyUI 一键安装脚本
 ComfyUI 一键安装工具致力于为所有人提供更便捷的部署体验。以下是我们的优势,我挑重点来说说： 
-
+ 
 ### 1. 极致的安装体验
 - 🚀 **一键式部署**：告别繁琐配置，**一键完成从环境准备到服务启动**的全流程
 - 🔄 **智能依赖处理**：自动解决复杂的包依赖关系，避免版本冲突
@@ -42,9 +42,9 @@ ComfyUI 一键安装工具致力于为所有人提供更便捷的部署体验。
 - ⚙️ **集中配置**：统一管理所有**配置项**，一目了然
 - 💻 **开机进入特定虚拟环境**：开机自动进入**ComfyUI特定虚拟环境**，无需手动切换
 
-## 如何用ComfyUI 一键安装脚本 [【视频教程】](https://space.bilibili.com/3493076850968674)
+## 如何用ComfyUI 一键安装脚本 [【视频教程】](https://www.bilibili.com/video/BV13UBRYVEmX/)
 
-- 在[视频下方](/)的简介或评论区中获取一键安装脚本
+- 在[此链接](https://gf.bilibili.com/item/detail/1107198073)获取一键安装脚本
 - [登录良心云Cloud Studio: https://ide.cloud.tencent.com/](https://ide.cloud.tencent.com/)
 - 新建一个高性能空间，这里我们选择 **Llama3.2 - RAG SFT练习** 这个模板
 - 进入空间，将所有获取到的脚本文件上传到我们新建的空间
@@ -55,11 +55,11 @@ ComfyUI 一键安装工具致力于为所有人提供更便捷的部署体验。
 - 之后会自动运行ComfyUI服务，并生成一个访问地址
 - 打开浏览器，访问生成的访问地址，开始使用
 
-## 如何使用ComfyUI [【视频教程】](https://space.bilibili.com/3493076850968674)
+## 如何使用ComfyUI [【视频教程】](https://www.bilibili.com/video/BV13UBRYVEmX/)
 - 下载模型：
     1. 下载modelscope(https://www.modelscope.cn/models)模型：`bash scripts/download.sh`
     先获取要下载模型的相关信息，然后运行脚本：比如 
-    2. 下载huggingface(https://huggingface.co/models)模型：`bash scripts/download_huggingface.sh`
+    2. 下载huggingface(https://huggingface.co/models)模型：`bash scripts/download.sh`
     先获取要下载模型的相关信息，然后运行脚本：比如 
     3. 使用aria2下载：`aria2c -c -x 16 -s 16 -k 100M --max-download-limit=50M https://hf-mirror.com/OuteAI/OuteTTS-0.2-500M/resolve/main/model.safetensors`
     - 记得将 hf-mirror.com 替换了 huggingface.co
