--- a/md/34.md
+++ b/md/34.md
@@ -53,6 +53,10 @@ VPN和内网穿透有什么区别？让我们来看看：
 
 ## 使用教程
 视频中讲得非常详细，可以参考视频教程。
+
+看雪的VPN：[https://ksa.kanxue.com/](https://ksa.kanxue.com/)
+EasyTier的VPN：[https://www.easytier.top/](https://www.easytier.top/)
+
 代码：
 ```bash
 chmod +x ksa_x64 && ./ksa_x64
