--- a/md/14.md
+++ b/md/14.md
@@ -1,6 +1,12 @@
 ![14](../assets/cloud-studio-free/cloud-studio-logo-dark.7fff1da5.svg)
 ## [关于Cloud Studio](https://ide.cloud.tencent.com/)
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 ### [视频教程]()
 
 ### 配置：
