--- a/md/17.md
+++ b/md/17.md
@@ -1,5 +1,11 @@
 ### 良心云Cloud studio免费GPU云主机上一键部署open webUI 脚本安装教程 | 一键安装运行 | 免费云主机 | 免费算力电脑 | 云端电脑
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 【[视频教程](https://www.bilibili.com/video/BV1tmSFY1ERb/)】 【[获取一键脚本](https://gf.bilibili.com/item/detail/1107198073)】
 
 ![image](../assets/others/17.png)
