--- a/md/2.md
+++ b/md/2.md
@@ -2,6 +2,12 @@
 
 ## 本期视频内容要点 [视频地址](https://www.bilibili.com/video/BV1JRStYCEsU/)
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 【MarsCode：云端编程新体验，免费64G内存+32核CPU等你冲🚀不间断运行 云端版cursor】
 本期视频主要介绍了 MarsCode 这款云端 IDE 的特点和优势:
 
