--- a/md/21.md
+++ b/md/21.md
@@ -1,5 +1,11 @@
 ## Aitools之ComfyUI 一键安装脚本【ai来事】
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 ### 本视频解决什么问题？【[视频地址](https://www.bilibili.com/video/BV13UBRYVEmX/)】
 在 AI 创作领域，显卡及工具的配置往往会成为入门的第一道门槛。本视频就来解决这两个痛点，让人人都有你的AI PC,让你都能轻松部署。
 
