--- a/md/23.md
+++ b/md/23.md
@@ -1,6 +1,13 @@
 ## 超实用的AI工具和技巧分享
 
 大家好！今天要给大家带来几个超实用的AI工具和技巧。
+
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 【[视频链接](https://www.bilibili.com/video/BV1qf6wYkEKQ/)】【[工作流获取](https://gf.bilibili.com/item/detail/1107271073)】
 
 ### 偷网站神器
