--- a/md/24.md
+++ b/md/24.md
@@ -1,4 +1,12 @@
 大家好，今天给大家分享F 5 T T S 的一键安装脚本。
+
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
+
 上海交大开源的强大语音生成模型。
 大众多语言处理工具中，长文本处理能力最强的，可以处理长达5000字甚至更多。
 还可以通过3秒以内的声音样本，快速生成高质量的语音。
