--- a/md/25.md
+++ b/md/25.md
@@ -1,4 +1,11 @@
 大家好！本期视频我要介绍一个革命性的开源项目——Steel Browser。
+
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 想象一下，AI能像我们一样轻松上网、处理信息，还能自动化操作，Steel Browser就是让这些成为现实的神器！
 
 开发AI时，我们总被浏览器自动化的复杂配置、不稳定性能和繁琐接口困扰。这个开源项目帮我们解决这些痛点。
