--- a/md/32.md
+++ b/md/32.md
@@ -1,5 +1,11 @@
 ## gemini2.0 测试及本地使用、云端cline开发教程 cline+liteLLM+api 还有还强大好用的用法:你的ai代码编辑器+移动的vs code
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 ![视频](../assets/others/32.png)
 
 
