--- a/md/34.md
+++ b/md/34.md
@@ -1,5 +1,12 @@
 # 好用的VPN分享，你会用得上的虚拟专用网络
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
+
 ![image](../assets/others/34.png)
 
 ## 开场白
