--- a/md/35.md
+++ b/md/35.md
@@ -1,5 +1,12 @@
 # Cursor Free Trial Reset Tool: 优雅解决Cursor试用期限制
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
+
 ## 引言
 
 Cursor作为一款强大的AI辅助编程工具，深受开发者喜爱。然而，在免费试用期间，用户可能会遇到使用限制的提示：
