--- a/md/7.md
+++ b/md/7.md
@@ -1,5 +1,12 @@
 
 # 安装相应工具（可选）
+
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 ```bash
 apt update
 apt install curl -y
