--- a/md/8.md
+++ b/md/8.md
@@ -1,5 +1,11 @@
 # 永远在线的个人全栈ai开发平台部署教程，cloudflare pages+魔改强化版bolt+free ai api=全能开发
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 ## 【[视频教程](https://www.bilibili.com/video/BV1M8DTYPEJZ/)】
 
 ## 【[博客网站](/)】
