--- a/md/9.md
+++ b/md/9.md
@@ -1,5 +1,11 @@
 # 【平替cursor新选择】Cline + litellm + Gpt-4o API 本地及云端部署教程
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 本指南提供了在本地和云端IDE中安装和使用Cline + litellm + Gpt-4o API 的说明。
 
 ## 视频教程
