--- a/md/1.md
+++ b/md/1.md
@@ -1,5 +1,11 @@
 ![n8n](../assets/n8n-fanyi-api/n8n.png)
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 ## 本期视频内容要点
 
 【沉浸式翻译自定义API部署指南+N8N更好可定制化翻译工作流:用N8N打造你的专属翻译神器-N8N教程[本期视频](https://www.bilibili.com/video/BV1PZy2YdErb/)】
