--- a/md/15.md
+++ b/md/15.md
@@ -1,5 +1,11 @@
 ## 帮你们试了，要装！windsurf Ai编程神器 体验极好，与curso不相上下，免费使用，速上。实战你们感兴趣的程序，来体验一下吧
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 ### [视频教程](https://www.bilibili.com/video/BV1B3U7YuEcZ/)
 
 ![img](../assets/others/15.jpg)
