--- a/md/27.md
+++ b/md/27.md
@@ -1,5 +1,11 @@
 各位创作者好！今天为大家带来重磅消息 —— OpenAI最新推出的AI视频生成神器Sora，让我们一起来看看它有多强大！
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
+
 【核心亮点】
 想象一下，只需要输入文字或上传图片，就能生成高质量的视频内容。不管是1080P的高清画质，还是长达20秒的创意视频，Sora都能轻松搞定！
 
