--- a/md/3.md
+++ b/md/3.md
@@ -1,6 +1,11 @@
 # 主流Web框架在Cloudflare Workers的部署指南
 ![](../assets/others/3.jpg)
 
+交流群：
+
+企微  https://qr61.cn/oohivs/qRp62U6
+
+Discord https://discord.gg/3JWMgKQznF
 
 ## 开发环境必需：
 ### 【[视频教程](https://www.bilibili.com/video/BV1sFSqYGEem/)】
