--- a/md/36.md
+++ b/md/36.md
@@ -30,6 +30,15 @@
 
 **DEMO** 【[bolt.diy](https://bolt.remix.us.kg/)】
 
+#### cloudflare pages 部署相关设置:
+-  [fork项目地址](https://github.com/aigem/bolt.diy)
+- 构建命令:
+  pnpm run build
+- 构建输出:
+  build/client
+- 根目录:
+  build/client
+
 ### 本地安装 bolt.diy
 
 1. **安装 Git**  
@@ -74,4 +83,4 @@
 - 【[DEMO](https://bolt.remix.us.kg/)】
 - 【[大佬用bolt.new做的视频游戏DEMO](https://hand-lab.netlify.app/)】
 
-![bolt.diy](../assets/others/36-1.jpg)
+![bolt.diy](../assets/others/36-1.png)
