--- a/md/41.md
+++ b/md/41.md
@@ -11,15 +11,16 @@
 ``` 
 git config --global url."https://gh-proxy.com/".insteadOf https://
 git clone https://github.com/DustinBrett/daedalOS.git
-- cd daedalOS
-- npm install -g yarn
-- yarn install
-- yarn build
-- yarn serve
+cd daedalOS
+npm install -g yarn
+yarn install
+yarn build
+yarn serve
 ```
 
 ### 云端安装流程：
 可选 marscode.com 或 cloudstudio.net
+
 marscode.com : （[视频教程](https://www.bilibili.com/video/BV1JRStYCEsU/)）
 
 确保安装了 node 和 yarn ，安装命令同上。
